# monasca-events-transform

./: .gitignore  README.md  api_to_transform.py  requirements.txt  setup.cfg  transform_func_test.py
etc/: monasca_events_transform.conf
func_test/: transform_func_test.py
monasca_events_transform/: database.py  definition.py  generator.py  main.py  transform.py
tests/: generator.py
