[metadata]
name = monasca-events-transform
summary = Monasca event transformation
author = Hewlett-Packard 
home-page = https://github.com/hpcloud-mon/monasca-events-transform
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_events_transform

[entry_points]
console_scripts =
    events_transform = monasca_events_transform.main:main

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
